--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@andreaspizsa/eslint-config-xo": "^0.1.2",
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
-    "ava": "1.0.0-rc.2",
+    "ava": "^1.4.1",
     "benchmark": "^2.1.4",
     "cheerio": "^1.0.0-rc.2",
     "coveralls": "^3.0.2",
@@ -29,8 +29,8 @@
     "html-tag-parser": "^1.0.0",
     "htmlparser2": "^3.10.0",
     "husky": "^1.2.0",
-    "microbundle": "^0.8.3",
-    "microtime": "^2.1.8",
+    "microbundle": "^0.11.0",
+    "microtime": "^3.0.0",
     "nyc": "^13.1.0",
     "parse5": "^5.1.0",
     "rimraf": "^2.6.2",
